feat: layout, architecture, login, register and notes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+// @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
+// h1, h2, h3, h4, h5, h6, .title {
+//   font-family: 'Fredoka One', cursive;
+// }
+
+.input-edit-on-click {
+  height: auto;
+  padding: 0;
+}
+
+.swal2-popup {
+  width: auto !important;
+}
