--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -5,12 +5,12 @@
         <div class="column is-12-mobile is-8-tablet is-5-desktop">
           <div class="box px-6 py-6">
             <h1 class="title is-2 has-text-black">
-              Register
+              {{ 'Register' | translate }}
             </h1>
             <br>
             <form [formGroup]="registerForm" (ngSubmit)="register()">
               <div class="field">
-                <label class="label">Name</label>
+                <label class="label">{{ 'Name' | translate }}</label>
                 <div class="control">
                   <input class="input" type="text" formControlName="name">
                 </div>
@@ -22,7 +22,7 @@
                 </div>
               </div>
               <div class="field">
-                <label class="label">Password</label>
+                <label class="label">{{ 'Password' | translate }}</label>
                 <div class="control">
                   <input class="input" type="password" formControlName="password">
                 </div>
@@ -35,7 +35,7 @@
                       class="button is-link is-rounded is-fullwidth"
                       [class]="{ 'is-loading': loading }"
                       [disabled]="!registerForm.valid || loading">
-                      Register
+                      {{ 'Register' | translate }}
                     </button>
                   </div>
                 </div>
@@ -44,7 +44,7 @@
             <br>
             <hr>
             <div class="has-text-centered">
-              <a href="/login">I already have an account</a>
+              <a href="/login">{{ 'IAlreadyHaveAnAccount' | translate }}</a>
             </div>
           </div>
         </div>
