--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,13 @@
-// @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 
-// h1, h2, h3, h4, h5, h6, .title {
-//   font-family: 'Fredoka One', cursive;
-// }
+h1, h2, h3, h4, h5, h6, .title {
+  font-family: 'Fredoka One', cursive;
+}
 
 .input-edit-on-click {
   height: auto;
   padding: 0;
+  border: 0;
 }
 
 .swal2-popup {
