--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<section class="hero is-link is-fullheight">
+<section class="hero is-primary is-fullheight">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered">
@@ -7,32 +7,51 @@
             <h1 class="title is-2 has-text-black">
               {{ 'Register' | translate }}
             </h1>
-            <br>
+            <h2 class="subtitle has-text-black">
+              {{ 'registerSubtitle' | translate }}
+            </h2>
             <form [formGroup]="registerForm" (ngSubmit)="register()">
               <div class="field">
                 <label class="label">{{ 'Name' | translate }}</label>
-                <div class="control">
+                <div class="control has-icons-left">
                   <input class="input" type="text" formControlName="name">
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-user"></i>
+                  </span>
                 </div>
               </div>
               <div class="field">
                 <label class="label">E-mail</label>
-                <div class="control">
+                <div class="control has-icons-left">
                   <input class="input" type="email" formControlName="email">
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-envelope"></i>
+                  </span>
                 </div>
+                <p class="help">{{ 'emailInputHelp' | translate }}</p>
               </div>
               <div class="field">
                 <label class="label">{{ 'Password' | translate }}</label>
-                <div class="control">
+                <div class="control has-icons-left">
                   <input class="input" type="password" formControlName="password">
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-lock"></i>
+                  </span>
                 </div>
+                <p class="help">{{ 'passwordInputHelp' | translate }}</p>
+              </div>
+              <div class="field">
+                <label class="checkbox">
+                  <input type="checkbox" formControlName="terms">
+                  {{ 'IAgreeToThe' | translate }} <a [href]="'assets/txt/' + ('termsFile' | translate)" target="_blank">terms and conditions</a>
+                </label>
               </div>
               <br>
               <div class="has-text-centered">
                 <div class="field">
                   <div class="control">
                     <button type="submit"
-                      class="button is-link is-rounded is-fullwidth"
+                      class="button is-primary is-rounded is-fullwidth"
                       [class]="{ 'is-loading': loading }"
                       [disabled]="!registerForm.valid || loading">
                       {{ 'Register' | translate }}
