feat: basic mobile compatibility

--- a/src/app/components/language-switch/language-switch.component.scss
+++ b/src/app/components/language-switch/language-switch.component.scss
@@ -1,7 +1,7 @@
 .lang-switch {
   position: fixed;
   right: 0;
-  top: 150px;
+  bottom: 100px;
   background-color: #fff;
   padding: 5px;
   border-radius: 4px 0 0 4px;
