--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -1,10 +1,20 @@
+$sidebar-width: 300px;
+
 .sidebar {
   position: fixed;
   left: 0;
   top: 0;
   height: 100vh;
-  width: 300px;
+  width: $sidebar-width;
   padding: 20px;
+  transition: .4s;
+  z-index: 1;
+  .burger {
+    position: absolute;
+    right: -50px;
+    top: 0;
+    background: none;
+  }
   hr {
     background-color: #e5e5e5;
   }
@@ -41,7 +51,7 @@
 .current-note {
   padding: 20px;
   height: 100vh;
-  margin-left: 300px;
+  margin-left: $sidebar-width;
   overflow-y: scroll;
   position: relative;
   .centered-message {
@@ -61,4 +71,16 @@
   display: block;
   margin-bottom: 10px;
   color: #eee;
+}
+
+@media only screen and (max-width: 768px) {
+  .sidebar {
+    &.hidden {
+      transform: translateX(-$sidebar-width);
+    }
+  }
+  .current-note {
+    margin-left: 0;
+    padding-top: 56px;
+  }
 }
