feat: home, login and register error handling, alert service tweaks, global loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <router-outlet></router-outlet>
 <app-language-switch></app-language-switch>
+<ngx-loading-bar color="#8819bb" height="3px"></ngx-loading-bar>
