--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,11 +14,12 @@ h1, h2, h3, h4, h5, h6, .title {
 
 a {
   color: $dark;
-  font-weight: 500;
+  font-weight: 600;
   border-radius: 20px;
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.07);
-  }
+  letter-spacing: 1px;
+  // &:hover {
+  //   background-color: rgba(0, 0, 0, 0.07);
+  // }
 }
 
 label {
