fix: register autocomplete

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -23,7 +23,7 @@
               <div class="field">
                 <label class="label">E-mail</label>
                 <div class="control has-icons-left">
-                  <input class="input" type="email" formControlName="email" name="new-email">
+                  <input class="input" type="email" formControlName="email">
                   <span class="icon is-small is-left">
                     <i class="fas fa-envelope"></i>
                   </span>
@@ -33,7 +33,7 @@
               <div class="field">
                 <label class="label">{{ 'Password' | translate }}</label>
                 <div class="control has-icons-left">
-                  <input class="input" type="password" formControlName="password" name="new-password">
+                  <input class="input" type="password" formControlName="password" autocomplete="new-password">
                   <span class="icon is-small is-left">
                     <i class="fas fa-lock"></i>
                   </span>
