--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -19,7 +19,7 @@ $sidebar-width: 300px;
     background-color: #e5e5e5;
   }
   .menu-container {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 80%;
   }
   .user {
