--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -27,7 +27,7 @@ $sidebar-width: 300px;
       height: 48px;
       width: 48px;
       border-radius: 50%;
-      background-color: var(--primary-color);
+      background-color: #8819bb;
       padding-top: 6px;
       text-align: center;
       color: #fff;
