--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -64,6 +64,7 @@ $sidebar-width: 300px;
   padding: 20px;
   height: 100vh;
   margin-left: $sidebar-width;
+  margin-bottom: 20px;
   overflow-y: scroll;
   position: relative;
   .centered-message {
