feat: multiple style upgrades

--- a/src/app/components/language-switch/language-switch.component.scss
+++ b/src/app/components/language-switch/language-switch.component.scss
@@ -1,22 +1,16 @@
 .lang-switch {
-  position: fixed;
-  right: 0;
-  bottom: 100px;
-  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
   padding: 5px;
-  border-radius: 4px 0 0 4px;
-  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
+  border-radius: 4px;
   button {
     border: 0;
     padding: 0;
     cursor: pointer;
-    height: 40px;
-    width: 40px;
-    display: block;
-    margin-bottom: 10px;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
     background-size: contain;
-    &:last-child {
-      margin-bottom: 0;
-    }
   }
 }
