--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -1,5 +1,35 @@
 $sidebar-width: 300px;
 
+.mobile-navbar {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 54px;
+  transition: .4s;
+  z-index: 2;
+  box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.1);
+  .burger {
+    position: absolute;
+    left: 0;
+    top: 1px;
+    background: none;
+  }
+  p {
+    position: absolute;
+    left: 60px;
+    top: 50%;
+    transform: translateY(-50%);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: calc(100% - 70px);
+  }
+  &.has-offset {
+    left: $sidebar-width;
+  }
+}
 .sidebar {
   position: fixed;
   left: 0;
@@ -9,12 +39,7 @@ $sidebar-width: 300px;
   padding: 20px;
   transition: .4s;
   z-index: 1;
-  .burger {
-    position: absolute;
-    right: -50px;
-    top: 0;
-    background: none;
-  }
+  box-shadow: 4px 0px 4px 0px rgba(0,0,0,0.1);
   hr {
     background-color: #e5e5e5;
   }
@@ -41,7 +66,7 @@ $sidebar-width: 300px;
   }
   .menu-list a {
     margin-bottom: 10px;
-    border-radius: 20px;
+    border-radius: 4px;
     padding: 10px 20px;
     &.is-active {
       background-color: #e5e5e5;
@@ -58,6 +83,12 @@ $sidebar-width: 300px;
       color: #aaa;
       margin-right: 5px;
     }
+  }
+  .menu-bottom-section {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
   }
 }
 .current-note {
@@ -87,13 +118,17 @@ $sidebar-width: 300px;
 }
 
 @media only screen and (max-width: 768px) {
+  .mobile-navbar {
+    display: block;
+  }
   .sidebar {
     &.hidden {
       transform: translateX(-$sidebar-width);
+      box-shadow: none;
     }
   }
   .current-note {
     margin-left: 0;
-    padding-top: 56px;
+    margin-top: 55px;
   }
 }
