feat: multiple style upgrades

--- a/src/app/pages/application/application.component.html
+++ b/src/app/pages/application/application.component.html
@@ -60,7 +60,7 @@
     </aside>
   </div>
 </div>
-<div class="current-note">
+<div class="current-note has-background-white">
   <div class="centered-message has-text-centered" *ngIf="!selectedNote.id">
     <i class="far fa-folder-open"></i>
     <p>{{ 'SelectOneOfYourNotesOr' | translate }} <a (click)="newNote()">{{ 'createANewOne' | translate }}.</a></p>
