--- a/src/app/pages/application/application.component.scss
+++ b/src/app/pages/application/application.component.scss
@@ -1,35 +1,5 @@
 $sidebar-width: 300px;
 
-.mobile-navbar {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 54px;
-  transition: .4s;
-  z-index: 2;
-  box-shadow: 4px 4px 4px 0px rgba(0,0,0,0.1);
-  .burger {
-    position: absolute;
-    left: 0;
-    top: 1px;
-    background: none;
-  }
-  p {
-    position: absolute;
-    left: 60px;
-    top: 50%;
-    transform: translateY(-50%);
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    width: calc(100% - 70px);
-  }
-  &.has-offset {
-    left: $sidebar-width;
-  }
-}
 .sidebar {
   position: fixed;
   left: 0;
@@ -42,10 +12,6 @@ $sidebar-width: 300px;
   box-shadow: 4px 0px 4px 0px rgba(0,0,0,0.1);
   hr {
     background-color: #e5e5e5;
-  }
-  .menu-container {
-    overflow-y: auto;
-    max-height: 80%;
   }
   .user {
     .user-image {
@@ -64,71 +30,26 @@ $sidebar-width: 300px;
       margin-top: 2px;
     }
   }
-  .menu-list a {
-    margin-bottom: 10px;
-    border-radius: 4px;
-    padding: 10px 20px;
-    &.is-active {
-      background-color: #e5e5e5;
-      color: black;
-      font-weight: bold;
-    }
-    &:hover {
-      background-color: #e5e5e5;
-      .fas {
-        color: #666;
-      }
-    }
-    .fas {
-      color: #aaa;
-      margin-right: 5px;
-    }
-  }
-  .menu-bottom-section {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-  }
-}
-.current-note {
-  padding: 20px;
-  height: 100vh;
-  margin-left: $sidebar-width;
-  overflow-y: scroll;
-  position: relative;
-  .centered-message {
-    width: 200px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  .content {
-    min-height: 80vh;
-    display: block;
-    margin-bottom: 100px;
-  }
-}
-.far {
-  font-size: 150px;
-  display: block;
-  margin-bottom: 10px;
-  color: #eee;
 }
 
-@media only screen and (max-width: 768px) {
-  .mobile-navbar {
-    display: block;
-  }
-  .sidebar {
-    &.hidden {
-      transform: translateX(-$sidebar-width);
-      box-shadow: none;
+.box {
+  span.icon {
+    background-color: #eee;
+    border-radius: 50%;
+    padding: 15px;
+    height: 70px;
+    width: 70px;
+    display: inline-block;
+    position: relative;
+    i {
+      font-size: 25px;
+      position: absolute;
+      transform: translate(-43%, -50%);
+      left: 50%;
+      top: 50%;
     }
   }
-  .current-note {
-    margin-left: 0;
-    margin-top: 55px;
+  p {
+    font-size: 1.5em;
   }
 }
