--- a/src/app/pages/application/application.component.html
+++ b/src/app/pages/application/application.component.html
@@ -5,33 +5,35 @@
         <i class="fas fa-sign-out-alt"></i> Sair
       </a>
       <h1 class="title mt-5">
-        Bem vindo, {{ user.name.slice(0, user.name.indexOf(' ')) }}!
+        {{ 'Welcome' | translate }}, {{ user.name.slice(0, user.name.indexOf(' ')) }}!
       </h1>
       <p class="subtitle">
-        Clique no módulo que deseja acessar.
+        {{ 'ClickOnTheModuleYouWantToAccess' | translate }}
       </p>
       <div class="columns">
-        <div class="column is-3">
-          <a href="/app/notes">
+        <div class="column is-4">
+          <a routerLink="/app/notes">
             <div class="box has-text-centered py-6">
               <span class="icon is-large">
                 <i class="far fa-lg fa-copy"></i>
               </span>
-              <p>Notas</p>
+              <p>{{ 'Notes' | translate }}</p>
             </div>
           </a>
         </div>
-        <div class="column is-3">
-          <a href="/app/links">
+        <div class="column is-4">
+          <a routerLink="/app/links">
             <div class="box has-text-centered py-6">
               <span class="icon is-large">
                 <i class="fas fa-lg fa-link"></i>
               </span>
-              <p>Links</p>
+              <p>{{ 'Links' | translate }}</p>
             </div>
           </a>
         </div>
       </div>
+      <br>
+      <app-language-switch class="is-pulled-left"></app-language-switch>
     </div>
   </div>
 </section>
