--- a/src/app/pages/application/links/links.component.scss
+++ b/src/app/pages/application/links/links.component.scss
@@ -52,7 +52,7 @@ $sidebar-width: 300px;
       height: 48px;
       width: 48px;
       border-radius: 50%;
-      background-color: #8819bb;
+      background-color: #3273dc;
       padding-top: 6px;
       text-align: center;
       color: #fff;
@@ -108,6 +108,17 @@ $sidebar-width: 300px;
     min-height: 80vh;
     display: block;
     margin-bottom: 100px;
+  }
+}
+.link {
+  position: relative;
+  a {
+    width: 85%;
+    display: inline-block;
+  }
+  .delete-link-button {
+    width: 15%;
+    display: inline-block;
   }
 }
 .far {
