--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title">
-        Salvae
+        Elorama
       </h1>
       <h2 class="subtitle">
         {{ 'home.subtitle' | translate }}
