--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
           <div class="has-text-centered mb-6">
             <a [routerLink]="['/']">
               <h1 class="title is-1">
-                Salvae
+                Elorama
               </h1>
               <h2 class="subtitle">
                 {{ 'home.subtitle' | translate }}
